# nessie-ocr

./: .cproject  .project  AUTHORS.md  INSTALL.md  Makefile.am  NEWS.md  README.md  THANKS  platformOptions.sh  versionFilter.pl
doc/html/: a00002.html  a00003.html  a00004.html  a00007.html  a00008.html  a00015.html  a00016.html  a00021.html  a00022.html  a00025.html  a00026.html  a00028.html  a00032.html  a00034.html  a00036.html  a00038.html  a00040.html  a00043.html  a00045.html  a00049.html  a00050.html  a00054.html  a00055.html  a00057.html  a00058.html  a00062.html  a00065.html  a00069.html  a00072.html  a00073.html  a00075.html  a00077.html  a00078.html  a00080.html  a00082.html  a00084.html  a00086.html  a00087.html  a00088.html  a00089.md5  (+76 more)
include/: Makefile.am
include/NessieOcr/: Classifier.hpp  ClassifierStatistics.hpp  FeatureExtractor.hpp  FeatureVector.hpp  PreprocessorStatistics.hpp  Region.hpp
src/: DatasetEngine.cpp  FeatureExtractor.cpp  FeatureVector.cpp  KnnClassifier.cpp  Makefile.am  NessieException.cpp  PlainTextDataset.cpp  Statistics.cpp
tags/preprocessingStage-0.1.1/inc/: Region.hpp
tools/: initdbPostgreSQL.sql
trunk/: AUTHORS  Doxyfile  Makefile  Makefile.am  NEWS  README  configure.ac  doxygen.pl  initdb.sql  initdbMySQL.sql  initdbPostgreSQL.sql  make.pl  platformLinkerOptions.sh
trunk/doc/html/: _classification_algorithm_8cpp.html  _classification_algorithm_8cpp__incl.map  _classification_algorithm_8cpp__incl.md5  _classification_algorithm_8hpp-source.html  _classification_algorithm_8hpp.html  _classification_algorithm_8hpp__dep__incl.map  _classification_algorithm_8hpp__dep__incl.md5  _classification_algorithm_8hpp__incl.md5  _classification_paradigm_8cpp.html  _classification_paradigm_8cpp__incl.map  _classification_paradigm_8cpp__incl.md5  _classification_paradigm_8hpp-source.html  _classification_paradigm_8hpp.html  _classification_paradigm_8hpp__dep__incl.map  _classification_paradigm_8hpp__dep__incl.md5  _classifier_8cpp-source.html  _classifier_8cpp.html  _classifier_8cpp_1c0bdf334aee637e59f149928fd796f4_icgraph.map  _classifier_8cpp_1c0bdf334aee637e59f149928fd796f4_icgraph.md5  _classifier_8cpp__incl.map  _classifier_8cpp__incl.md5  _classifier_8cpp_a0347f59d9d4a61cfdc11716ec0672a6_cgraph.map  _classifier_8cpp_a0347f59d9d4a61cfdc11716ec0672a6_cgraph.md5  _classifier_8cpp_a0347f59d9d4a61cfdc11716ec0672a6_icgraph.map  _classifier_8cpp_a0347f59d9d4a61cfdc11716ec0672a6_icgraph.md5  _classifier_8h-source.html  _classifier_8hpp-source.html  _classifier_8hpp.html  _classifier_8hpp__dep__incl.map  _classifier_8hpp__dep__incl.md5  _classifier_8hpp__incl.map  _classifier_8hpp__incl.md5  _classifier_statistics_8cpp.html  _classifier_statistics_8cpp__incl.map  _classifier_statistics_8cpp__incl.md5  _classifier_statistics_8hpp-source.html  _classifier_statistics_8hpp.html  _classifier_statistics_8hpp__dep__incl.map  _classifier_statistics_8hpp__dep__incl.md5  _classifier_statistics_8hpp__incl.map  (+1240 more)
trunk/doc/latex/: _classifier_8cpp.tex  _classifier_8cpp__incl.eps  _classifier_8cpp__incl.md5  _classifier_8hpp.tex  _classifier_8hpp__dep__incl.eps  _classifier_8hpp__dep__incl.md5  _classifier_8hpp__incl.eps  _classifier_8hpp__incl.md5  _clip_8cpp.tex  _clip_8cpp__incl.eps  _clip_8cpp__incl.md5  _clip_8h.tex  _clip_8h__dep__incl.eps  _clip_8h__dep__incl.md5  _clip_8h__incl.eps  _clip_8h__incl.md5  _clip_8hpp.tex  _clip_8hpp__dep__incl.eps  _clip_8hpp__dep__incl.md5  _clip_8hpp__incl.eps  _clip_8hpp__incl.md5  _clip_location_8cpp.tex  _clip_location_8cpp__incl.eps  _clip_location_8cpp__incl.md5  _clip_location_8hpp.tex  _clip_location_8hpp__dep__incl.eps  _clip_location_8hpp__dep__incl.md5  _colorspace_8h.aux  _colorspace_8h.tex  _colorspace_8h__dep__incl.eps  _colorspace_8h__dep__incl.md5  _colorspace_8h__incl.eps  _colorspace_8h__incl.md5  _data_set_8cpp.tex  _data_set_8cpp__incl.eps  _data_set_8cpp__incl.md5  _data_set_8hpp.tex  _data_set_8hpp__dep__incl.eps  _data_set_8hpp__dep__incl.md5  _data_set_8hpp__incl.eps  (+382 more)
trunk/inc/: ClassificationAlgorithm.hpp  ClassificationParadigm.hpp  Classifier.h  Classifier.hpp  ClassifierStatistics.hpp  Clip.h  Clip.hpp  ClipLocation.hpp  Colorspace.h  DataSet.hpp  Dataset.hpp  FeatureExtractor.hpp  FeatureExtractorStatistics.hpp  FeatureVector.h  FeatureVector.hpp  FontColor.h  FontProportionality.h  FontWeight.h  KnnClassificationAlgorithm.hpp  KnnClassifier.hpp  MySqlDataset.hpp  NessieException.h  NessieException.hpp  NessieOcr.hpp  Partitioner.h  Pattern.hpp  Pixel.h  Pixel.hpp  PlainTextDataset.hpp  PostgreSqlDataset.hpp  Preprocessor.h  Preprocessor.hpp  PreprocessorStatistics.hpp  Recognizer.h  Recognizer.hpp  Region.hpp  RgbColor.h  Segmenter.hpp  Shape.h  Shape.hpp  (+8 more)
trunk/include/: ClassificationParadigm.hpp  Classifier.hpp  KnnClassifier.hpp  Makefile.am  MySqlDataset.hpp  Pattern.hpp  Preprocessor.hpp  PreprocessorStatistics.hpp  Text.hpp
trunk/include/NessieOcr/: ClassificationAlgorithm.hpp  Classifier.hpp  ClassifierStatistics.hpp  Clip.hpp  Dataset.hpp  DatasetEngine.hpp  FeatureExtractor.hpp  FeatureExtractorStatistics.hpp  KnnClassificationAlgorithm.hpp  KnnClassifier.hpp  MySqlDataset.hpp  NessieException.hpp  NessieOcr.hpp  Pattern.hpp  PlainTextDataset.hpp  Preprocessor.hpp  PreprocessorStatistics.hpp  Region.hpp  Statistics.hpp  Text.hpp
trunk/src/: ClassificationAlgorithm.cpp  ClassificationParadigm.cpp  Classifier.cpp  ClassifierStatistics.cpp  Clip.cpp  ClipLocation.cpp  DataSet.cpp  Dataset.cpp  FeatureExtractor.cpp  FeatureExtractorStatistics.cpp  FeatureVector.cpp  FontColor.cpp  KnnClassificationAlgorithm.cpp  KnnClassifier.cpp  Makefile.am  MySqlDataset.cpp  NessieException.cpp  NessieOcr.cpp  Partitioner.cpp  Pattern.cpp  Pixel.cpp  PlainTextDataset.cpp  PostgreSqlDataset.cpp  Preprocessor.cpp  PreprocessorStatistics.cpp  Recognizer.cpp  Region.cpp  RgbColor.cpp  Segmenter.cpp  Shape.cpp  Statistic.cpp  Statistics.cpp  Style.cpp  Text.cpp  WordRate.cpp  loadPDF.cpp  main.cpp  ocrtest.cpp  preprocessingTests.cpp  test.cpp
trunk/tools/: Doxyfile  initdbMySQL.sql
(+146 files in other folders)
