nobase_include_HEADERS = NessieOcr/ClassificationAlgorithm.hpp \
						 NessieOcr/Classifier.hpp \
						 NessieOcr/ClassifierStatistics.hpp \
						 NessieOcr/Clip.hpp \
						 NessieOcr/Dataset.hpp \
						 NessieOcr/FeatureExtractor.hpp \
						 NessieOcr/FeatureExtractorStatistics.hpp \
						 NessieOcr/FeatureVector.hpp \
						 NessieOcr/KnnClassificationAlgorithm.hpp \
						 NessieOcr/KnnClassifier.hpp \
						 NessieOcr/MySqlDataset.hpp \
						 NessieOcr/NessieException.hpp \
						 NessieOcr/NessieOcr.hpp \
						 NessieOcr/Pattern.hpp \
						 NessieOcr/PlainTextDataset.hpp \
						 NessieOcr/PostgreSqlDataset.hpp \
						 NessieOcr/Preprocessor.hpp \
						 NessieOcr/PreprocessorStatistics.hpp \
						 NessieOcr/Region.hpp \
						 NessieOcr/Statistics.hpp \
						 NessieOcr/Text.hpp

